[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/GUI/EconomyMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUI/HUD.gd" type="Script" id=2]
[ext_resource path="res://fonts/AkayaTelivigala-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/GUI/BarMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GUI/Research/UpgradeMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Widget/Statistic/StatisticPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/Ship/ShipBuilder.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GUI/Button/AnchorButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/GUI/Button/WorldViewButton.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BarMenu" parent="." instance=ExtResource( 4 )]
margin_left = -234.0
margin_top = -70.0
margin_right = 219.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="StatisticPanel" parent="." instance=ExtResource( 6 )]

[node name="MessagePanel" type="Label" parent="."]
visible = false
self_modulate = Color( 1, 0.196078, 0.196078, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Default message"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagePanelTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ResearchPopupMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="ShipBuilder" parent="." instance=ExtResource( 7 )]
visible = false

[node name="EconomyMenu" parent="." instance=ExtResource( 1 )]

[node name="AnchorButton" parent="." instance=ExtResource( 8 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -65.0
margin_right = 120.0
margin_bottom = 35.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="WorldViewButton" parent="." instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -130.0
margin_right = 120.0
margin_bottom = -29.9999
[connection signal="research_button_pressed" from="BarMenu" to="." method="_on_BarMenu_research_button_pressed"]
[connection signal="upgrade_button_pressed" from="BarMenu" to="." method="_on_BarMenu_upgrade_button_pressed"]
[connection signal="timeout" from="MessagePanelTimer" to="." method="_on_MessagePanelTimer_timeout"]
[connection signal="close_pressed" from="ResearchPopupMenu" to="." method="_on_UpgradePopupMenu_close_pressed"]
[connection signal="research_item_upgrad_started" from="ResearchPopupMenu" to="." method="_on_ResearchPopupMenu_research_item_upgrad_started"]
[connection signal="research_item_upgraded" from="ResearchPopupMenu" to="." method="_on_ResearchPopupMenu_research_item_upgraded"]
[connection signal="anchor_off" from="AnchorButton" to="." method="_on_AnchorButton_anchor_off"]
[connection signal="anchor_on" from="AnchorButton" to="." method="_on_AnchorButton_anchor_on"]
[connection signal="world_view_off" from="WorldViewButton" to="." method="_on_WorldViewButton_world_view_off"]
[connection signal="world_view_on" from="WorldViewButton" to="." method="_on_WorldViewButton_world_view_on"]
